@@ -1,6 +1,7 @@
 2009-01-30 Og Maciel <ogmaciel@gnome.org>
 
 	* src/gui/prefdialog.py: Handle missing gconf data when not installed.
+	* src/gui/widgets/datepicker.py: Don't trigger calendar widget event.
 
 2009-01-25 Og Maciel <ogmaciel@gnome.org>
 
